--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <path d="M16.6667 8.33335C16.6667 13.3334 10 18.3334 10 18.3334C10 18.3334 3.33337 13.3334 3.33337 8.33335C3.33337 6.56524 4.03575 4.86955 5.286 3.61931C6.53624 2.36907 8.23193 1.66669 10 1.66669C11.7682 1.66669 13.4638 2.36907 14.7141 3.61931C15.9643 4.86955 16.6667 6.56524 16.6667 8.33335Z" stroke="#E4E4E7" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
             <path d="M10 10.8334C11.3808 10.8334 12.5 9.71407 12.5 8.33335C12.5 6.95264 11.3808 5.83335 10 5.83335C8.61933 5.83335 7.50004 6.95264 7.50004 8.33335C7.50004 9.71407 8.61933 10.8334 10 10.8334Z" stroke="#E4E4E7" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
-          Florianópolis, SC
+          Coronel João Pessoa RN
         </div>
 
         <div class="fields">
